deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: ordproc-catalog-service
  labels:
    app: ordproc-catalog-service
spec:
  type: NodePort
  ports:
    - port: 8082
      name: http
  selector:
    app: ordproc-catalog-service
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ordproc-catalog-service
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ordproc-catalog-service
        version: v1
    spec:
      containers:
        - name: ordproc-catalog-service
          image: gandigit/ordproc-catalog-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
