gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ordproc-catalog-service-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ordproc-catalog-service
spec:
  hosts:
    - "*"
  gateways:
    - ordproc-catalog-service-gateway
  http:
    - match:
      - uri:
        prefix: /catalog
        route:
        - destination:
          host: ordproc-catalog-service
          port:
          number: 8082
